--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     implementation 'com.caverock:androidsvg:1.4'
+    implementation 'com.caverock:androidsvg:1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
 }
